Added lorem ipsum

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,20 +1,36 @@
- \documentclass[letterpaper]{article}
- \usepackage{aaai}
- \usepackage{times}
- \usepackage{helvet}
- \usepackage{courier}
- \setlength{\pdfpagewidth}{8.5in} 
- \setlength{\pdfpageheight}{11in}
+\documentclass[letterpaper]{article}
+\usepackage{aaai}
+\usepackage{times}
+\usepackage{helvet}
+\usepackage{courier}
+\setlength{\pdfpagewidth}{8.5in} 
+\setlength{\pdfpageheight}{11in}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- \setcounter{secnumdepth}{0}
+\setcounter{secnumdepth}{0}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- \title{Research Proposal: Learning Regular Expressions}
- \author{Henry Ingram\\ Address line \\ Address line \And
+\title{Research Proposal: Learning Regular Expressions}
+\author{Henry Ingram\\ Address line \\ Address line \And
 Isaac Scheinfeld \\ Address line \\ Address line}
- \begin{document}
- \maketitle
-\abstract{}
+\begin{document}
+\maketitle
+\begin{abstract}
+  Nam hendrerit egestas fermentum. Maecenas commodo massa in enim consectetur scelerisque. Maecenas vestibulum augue at elit placerat facilisis. Nulla porta, tellus at consequat porttitor, orci tortor posuere enim, et interdum orci lorem quis augue. Ut congue pretium dui eu hendrerit. Ut imperdiet ante nec posuere viverra.
+
+\end{abstract}
+
+\section{First bit}
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra nunc est, eu imperdiet odio hendrerit eu. Etiam ut diam dignissim, porta odio id, euismod felis. Pellentesque ut tortor sed ipsum congue congue et at ex. Phasellus dictum placerat ante a iaculis. Sed eleifend feugiat sodales. Vivamus quis mattis lorem. Fusce finibus vel nisi eget scelerisque. Etiam ligula massa, sodales non posuere molestie, tristique at risus. Vestibulum vitae purus quam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce accumsan nunc quis fermentum pretium.
+
+\section{Second bit}
+
+Nam congue orci nibh, in aliquet dui suscipit non. Pellentesque elementum vitae ipsum sed lacinia. In sed nunc ac mauris posuere dignissim id eu ipsum. Donec dictum eu nulla non condimentum. In tincidunt egestas scelerisque. Donec nibh mi, tincidunt ac turpis id, tincidunt congue lorem. Curabitur sagittis orci nec sem lobortis pellentesque. Cras ornare placerat nibh, in tempor odio ornare quis. Duis elementum, ante rutrum cursus laoreet, arcu purus tincidunt mi, a fermentum neque diam ut odio.
+
+\section{Third bit}
+
+Aliquam in faucibus nisi. Etiam mollis, augue nec facilisis vehicula, sem nibh viverra nunc, quis lobortis justo sem faucibus ligula. Nam eget turpis velit. Phasellus maximus lacus at arcu accumsan aliquet. Maecenas bibendum, urna et pretium viverra, est risus sagittis ipsum, quis sagittis felis ex a mauris. Etiam ullamcorper quis tellus eu mattis. Nam hendrerit egestas fermentum. Maecenas commodo massa in enim consectetur scelerisque. Maecenas vestibulum augue at elit placerat facilisis. Nulla porta, tellus at consequat porttitor, orci tortor posuere enim, et interdum orci lorem quis augue. Ut congue pretium dui eu hendrerit. Ut imperdiet ante nec posuere viverra.
+
  \bibliography{Bibliography-File}
  \bibliographystyle{aaai}
  \end{document}
