--- a/proposal/aaai.sty
+++ b/proposal/aaai.sty
@@ -134,7 +134,7 @@ All rights reserved.}
 \twocolumn[\@maketitle] \@thanks
 \endgroup
 % gf: Insert copyright slug unless turned off
-\if T\copyright@on\insert\footins{\noindent\footnotesize\copyright@text}\fi
+%\if T\copyright@on\insert\footins{\noindent\footnotesize\copyright@text}\fi
 % gf: And now back to your regular programming
 \setcounter{footnote}{0}
 \let\maketitle\relax \let\@maketitle\relax
