Added basic regex generator to regex sandbox

--- a/code/KerasSandbox.ipynb
+++ b/code/KerasSandbox.ipynb
@@ -5,10 +5,11 @@
    "metadata": {},
    "source": [
     "### Notes and Sources\n",
-    "#### contrastive loss\n",
+    "#### Contrastive Loss\n",
     "#### Triplet Loss\n",
-    "\n",
-    "https://github.com/maciejkula/triplet_recommendations_keras"
+    "https://github.com/maciejkula/triplet_recommendations_keras\n",
+    "#### Comparison\n",
+    "https://www.quora.com/What-are-the-advantages-of-using-a-triplet-loss-function-over-a-contrastive-loss-How-would-you-decide-which-to-use"
    ]
   },
   {
