--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -15,20 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def all_strings(n, characters):\n",
-    "    for s in product(characters, repeat=n):\n",
+    "def all_strings(n, alphabet):\n",
+    "    for s in product(alphabet, repeat=n):\n",
     "        yield ''.join(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
        "re.compile(r'o[gh]', re.UNICODE)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -110,19 +110,19 @@
        "['og', 'oh']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match_2 = [string for string in all_strings(2) if pattern.fullmatch(string)]\n",
+    "match_2 = [string for string in all_strings(2, ascii_letters) if pattern.fullmatch(string)]\n",
     "match_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -151,185 +151,10 @@
        " re.compile(r'aac', re.UNICODE),\n",
        " re.compile(r'aad', re.UNICODE),\n",
        " re.compile(r'aa|', re.UNICODE),\n",
-       " re.compile(r'aa*', re.UNICODE),\n",
-       " re.compile(r'aba', re.UNICODE),\n",
-       " re.compile(r'abb', re.UNICODE),\n",
-       " re.compile(r'abc', re.UNICODE),\n",
-       " re.compile(r'abd', re.UNICODE),\n",
-       " re.compile(r'ab|', re.UNICODE),\n",
-       " re.compile(r'ab*', re.UNICODE),\n",
-       " re.compile(r'aca', re.UNICODE),\n",
-       " re.compile(r'acb', re.UNICODE),\n",
-       " re.compile(r'acc', re.UNICODE),\n",
-       " re.compile(r'acd', re.UNICODE),\n",
-       " re.compile(r'ac|', re.UNICODE),\n",
-       " re.compile(r'ac*', re.UNICODE),\n",
-       " re.compile(r'ada', re.UNICODE),\n",
-       " re.compile(r'adb', re.UNICODE),\n",
-       " re.compile(r'adc', re.UNICODE),\n",
-       " re.compile(r'add', re.UNICODE),\n",
-       " re.compile(r'ad|', re.UNICODE),\n",
-       " re.compile(r'ad*', re.UNICODE),\n",
-       " re.compile(r'a()', re.UNICODE),\n",
-       " re.compile(r'a|a', re.UNICODE),\n",
-       " re.compile(r'a|b', re.UNICODE),\n",
-       " re.compile(r'a|c', re.UNICODE),\n",
-       " re.compile(r'a|d', re.UNICODE),\n",
-       " re.compile(r'a||', re.UNICODE),\n",
-       " re.compile(r'a*a', re.UNICODE),\n",
-       " re.compile(r'a*b', re.UNICODE),\n",
-       " re.compile(r'a*c', re.UNICODE),\n",
-       " re.compile(r'a*d', re.UNICODE),\n",
-       " re.compile(r'a*|', re.UNICODE),\n",
-       " re.compile(r'baa', re.UNICODE),\n",
-       " re.compile(r'bab', re.UNICODE),\n",
-       " re.compile(r'bac', re.UNICODE),\n",
-       " re.compile(r'bad', re.UNICODE),\n",
-       " re.compile(r'ba|', re.UNICODE),\n",
-       " re.compile(r'ba*', re.UNICODE),\n",
-       " re.compile(r'bba', re.UNICODE),\n",
-       " re.compile(r'bbb', re.UNICODE),\n",
-       " re.compile(r'bbc', re.UNICODE),\n",
-       " re.compile(r'bbd', re.UNICODE),\n",
-       " re.compile(r'bb|', re.UNICODE),\n",
-       " re.compile(r'bb*', re.UNICODE),\n",
-       " re.compile(r'bca', re.UNICODE),\n",
-       " re.compile(r'bcb', re.UNICODE),\n",
-       " re.compile(r'bcc', re.UNICODE),\n",
-       " re.compile(r'bcd', re.UNICODE),\n",
-       " re.compile(r'bc|', re.UNICODE),\n",
-       " re.compile(r'bc*', re.UNICODE),\n",
-       " re.compile(r'bda', re.UNICODE),\n",
-       " re.compile(r'bdb', re.UNICODE),\n",
-       " re.compile(r'bdc', re.UNICODE),\n",
-       " re.compile(r'bdd', re.UNICODE),\n",
-       " re.compile(r'bd|', re.UNICODE),\n",
-       " re.compile(r'bd*', re.UNICODE),\n",
-       " re.compile(r'b()', re.UNICODE),\n",
-       " re.compile(r'b|a', re.UNICODE),\n",
-       " re.compile(r'b|b', re.UNICODE),\n",
-       " re.compile(r'b|c', re.UNICODE),\n",
-       " re.compile(r'b|d', re.UNICODE),\n",
-       " re.compile(r'b||', re.UNICODE),\n",
-       " re.compile(r'b*a', re.UNICODE),\n",
-       " re.compile(r'b*b', re.UNICODE),\n",
-       " re.compile(r'b*c', re.UNICODE),\n",
-       " re.compile(r'b*d', re.UNICODE),\n",
-       " re.compile(r'b*|', re.UNICODE),\n",
-       " re.compile(r'caa', re.UNICODE),\n",
-       " re.compile(r'cab', re.UNICODE),\n",
-       " re.compile(r'cac', re.UNICODE),\n",
-       " re.compile(r'cad', re.UNICODE),\n",
-       " re.compile(r'ca|', re.UNICODE),\n",
-       " re.compile(r'ca*', re.UNICODE),\n",
-       " re.compile(r'cba', re.UNICODE),\n",
-       " re.compile(r'cbb', re.UNICODE),\n",
-       " re.compile(r'cbc', re.UNICODE),\n",
-       " re.compile(r'cbd', re.UNICODE),\n",
-       " re.compile(r'cb|', re.UNICODE),\n",
-       " re.compile(r'cb*', re.UNICODE),\n",
-       " re.compile(r'cca', re.UNICODE),\n",
-       " re.compile(r'ccb', re.UNICODE),\n",
-       " re.compile(r'ccc', re.UNICODE),\n",
-       " re.compile(r'ccd', re.UNICODE),\n",
-       " re.compile(r'cc|', re.UNICODE),\n",
-       " re.compile(r'cc*', re.UNICODE),\n",
-       " re.compile(r'cda', re.UNICODE),\n",
-       " re.compile(r'cdb', re.UNICODE),\n",
-       " re.compile(r'cdc', re.UNICODE),\n",
-       " re.compile(r'cdd', re.UNICODE),\n",
-       " re.compile(r'cd|', re.UNICODE),\n",
-       " re.compile(r'cd*', re.UNICODE),\n",
-       " re.compile(r'c()', re.UNICODE),\n",
-       " re.compile(r'c|a', re.UNICODE),\n",
-       " re.compile(r'c|b', re.UNICODE),\n",
-       " re.compile(r'c|c', re.UNICODE),\n",
-       " re.compile(r'c|d', re.UNICODE),\n",
-       " re.compile(r'c||', re.UNICODE),\n",
-       " re.compile(r'c*a', re.UNICODE),\n",
-       " re.compile(r'c*b', re.UNICODE),\n",
-       " re.compile(r'c*c', re.UNICODE),\n",
-       " re.compile(r'c*d', re.UNICODE),\n",
-       " re.compile(r'c*|', re.UNICODE),\n",
-       " re.compile(r'daa', re.UNICODE),\n",
-       " re.compile(r'dab', re.UNICODE),\n",
-       " re.compile(r'dac', re.UNICODE),\n",
-       " re.compile(r'dad', re.UNICODE),\n",
-       " re.compile(r'da|', re.UNICODE),\n",
-       " re.compile(r'da*', re.UNICODE),\n",
-       " re.compile(r'dba', re.UNICODE),\n",
-       " re.compile(r'dbb', re.UNICODE),\n",
-       " re.compile(r'dbc', re.UNICODE),\n",
-       " re.compile(r'dbd', re.UNICODE),\n",
-       " re.compile(r'db|', re.UNICODE),\n",
-       " re.compile(r'db*', re.UNICODE),\n",
-       " re.compile(r'dca', re.UNICODE),\n",
-       " re.compile(r'dcb', re.UNICODE),\n",
-       " re.compile(r'dcc', re.UNICODE),\n",
-       " re.compile(r'dcd', re.UNICODE),\n",
-       " re.compile(r'dc|', re.UNICODE),\n",
-       " re.compile(r'dc*', re.UNICODE),\n",
-       " re.compile(r'dda', re.UNICODE),\n",
-       " re.compile(r'ddb', re.UNICODE),\n",
-       " re.compile(r'ddc', re.UNICODE),\n",
-       " re.compile(r'ddd', re.UNICODE),\n",
-       " re.compile(r'dd|', re.UNICODE),\n",
-       " re.compile(r'dd*', re.UNICODE),\n",
-       " re.compile(r'd()', re.UNICODE),\n",
-       " re.compile(r'd|a', re.UNICODE),\n",
-       " re.compile(r'd|b', re.UNICODE),\n",
-       " re.compile(r'd|c', re.UNICODE),\n",
-       " re.compile(r'd|d', re.UNICODE),\n",
-       " re.compile(r'd||', re.UNICODE),\n",
-       " re.compile(r'd*a', re.UNICODE),\n",
-       " re.compile(r'd*b', re.UNICODE),\n",
-       " re.compile(r'd*c', re.UNICODE),\n",
-       " re.compile(r'd*d', re.UNICODE),\n",
-       " re.compile(r'd*|', re.UNICODE),\n",
-       " re.compile(r'(a)', re.UNICODE),\n",
-       " re.compile(r'(b)', re.UNICODE),\n",
-       " re.compile(r'(c)', re.UNICODE),\n",
-       " re.compile(r'(d)', re.UNICODE),\n",
-       " re.compile(r'()a', re.UNICODE),\n",
-       " re.compile(r'()b', re.UNICODE),\n",
-       " re.compile(r'()c', re.UNICODE),\n",
-       " re.compile(r'()d', re.UNICODE),\n",
-       " re.compile(r'()|', re.UNICODE),\n",
-       " re.compile(r'()*', re.UNICODE),\n",
-       " re.compile(r'(|)', re.UNICODE),\n",
-       " re.compile(r'|aa', re.UNICODE),\n",
-       " re.compile(r'|ab', re.UNICODE),\n",
-       " re.compile(r'|ac', re.UNICODE),\n",
-       " re.compile(r'|ad', re.UNICODE),\n",
-       " re.compile(r'|a|', re.UNICODE),\n",
-       " re.compile(r'|a*', re.UNICODE),\n",
-       " re.compile(r'|ba', re.UNICODE),\n",
-       " re.compile(r'|bb', re.UNICODE),\n",
-       " re.compile(r'|bc', re.UNICODE),\n",
-       " re.compile(r'|bd', re.UNICODE),\n",
-       " re.compile(r'|b|', re.UNICODE),\n",
-       " re.compile(r'|b*', re.UNICODE),\n",
-       " re.compile(r'|ca', re.UNICODE),\n",
-       " re.compile(r'|cb', re.UNICODE),\n",
-       " re.compile(r'|cc', re.UNICODE),\n",
-       " re.compile(r'|cd', re.UNICODE),\n",
-       " re.compile(r'|c|', re.UNICODE),\n",
-       " re.compile(r'|c*', re.UNICODE),\n",
-       " re.compile(r'|da', re.UNICODE),\n",
-       " re.compile(r'|db', re.UNICODE),\n",
-       " re.compile(r'|dc', re.UNICODE),\n",
-       " re.compile(r'|dd', re.UNICODE),\n",
-       " re.compile(r'|d|', re.UNICODE),\n",
-       " re.compile(r'|d*', re.UNICODE),\n",
-       " re.compile(r'|()', re.UNICODE),\n",
-       " re.compile(r'||a', re.UNICODE),\n",
-       " re.compile(r'||b', re.UNICODE),\n",
-       " re.compile(r'||c', re.UNICODE),\n",
-       " re.compile(r'||d', re.UNICODE),\n",
-       " re.compile(r'|||', re.UNICODE)]"
+       " re.compile(r'aa*', re.UNICODE)]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,11 +162,11 @@
    "source": [
     "char_count = 4 # Must be < 2 * 26\n",
     "characters = ascii_letters[:char_count]\n",
-    "symbols = characters + \"()|*\"\n",
+    "alphabet = characters + \"()|*\"\n",
     "possible_strings = list(all_strings(3, characters))\n",
-    "possible_regexes = all_strings(3, symbols)\n",
+    "possible_regexes = all_strings(3, alphabet)\n",
     "valid_regexes = list(extract_valid_regexes(possible_regexes))\n",
-    "valid_regexes"
+    "valid_regexes[0:6]"
    ]
   },
   {
@@ -353,6 +178,45 @@
    "outputs": [],
    "source": [
     "reg = re.compile('|||') # Note that this is a valid regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gen_valid_regexes(length, alphabet):\n",
+    "    return extract_valid_regexes(all_strings(length, alphabet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[re.compile(r'aaaa', re.UNICODE),\n",
+       " re.compile(r'aaab', re.UNICODE),\n",
+       " re.compile(r'aaac', re.UNICODE),\n",
+       " re.compile(r'aaad', re.UNICODE),\n",
+       " re.compile(r'aaa|', re.UNICODE),\n",
+       " re.compile(r'aaa*', re.UNICODE)]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(gen_valid_regexes(4, alphabet))[:6]"
    ]
   },
   {
